--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-This is the home page. 
+<HTML>
+<HEAD>
+<TITLE>Hello World in HTML</TITLE>
+</HEAD>
+<BODY>
+<CENTER><H1>Hello World!</H1></CENTER>
+</BODY>
+</HTML>
